# hwmonitor-mqtt

./: .env.example  .gitignore  DISPLAY_SETUP_3.5inch.md  Dockerfile  GPU_REQUIREMENTS.md  LICENSE  README.md  agent_sender_async.py  agent_sender_windows.py  docker-compose.yml  monitor.html  package-lock.json  pygame_viewer.py  pyproject.toml
docs/: README.md
docs/architecture/: system-overview.md  windows-runtime-sequence.md
docs/configuration/: env-vars.md
docs/deployment/: docker-profiles.md  windows-task-scheduler.md
docs/getting-started/: quickstart.md
docs/hardware/: README.md
docs/hardware/display/: raspberrypi-3.5inch.md
docs/hardware/gpu/: requirements.md
docs/troubleshooting/: common-issues.md
hwmonitor_mqtt/: __init__.py
hwmonitor_mqtt/agents/: __init__.py  agent_sender_windows.py
hwmonitor_mqtt/viewers/: __init__.py  pygame_viewer.py  tui_viewer.py
scripts/windows/: install_windows_sender_task.ps1  start_windows_sender.ps1  uninstall_windows_sender_task.ps1
tests/: test_esp_sender_profile.py  test_gpu_block.py  test_pygame_viewer.py  test_tui_gpu_label.py  test_windows_sender_profile.py
wifi_portal/: DEPLOYMENT.md  Dockerfile  INSTALL_SUMMARY.md  MANIFEST.in  README.md  __init__.py  check-install.sh  docker-compose.yml  install.sh  portal-service.sh  reinstall.sh  run-dev.sh  setup-ap-mode.sh  setup.py  wifi-portal.service  wifi_manager.py
wifi_portal/webui/: __init__.py  app.py
wifi_portal/webui/static/: styles.css
wifi_portal/webui/templates/: base.html  index.html
