[project]
name = "hwmonitor-mqtt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.0",
    "paho-mqtt>=2.1.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "textual>=6.3.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "pygame>=2.6.1",
]
